--- a/.assets/style.css
+++ b/.assets/style.css
@@ -45,16 +45,19 @@ body {
   .past{
     background-color: #d3d3d3;
     color: white;
+    width: 50vw;
   }
   
   .present {
     background-color: #ff6961;
     color: white;
+    width: 50vw;
   }
   
   .future {
     background-color: #77dd77;
     color: white;
+    width: 50vw;
   }
   
   .saveBtn {
